--- a/git-flow/index.html
+++ b/git-flow/index.html
@@ -50,7 +50,7 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">Saludos me llamo juan</h2>
-              <p>Un service worker es una secuencia de comandos ejecutados por el navegador en segundo plano. Se trata de un fichero JavaScript que continúa ejecutándose aunque el sitio web esté cerrado. ... No puede acceder directamente al DOM, sino que se comunica con las páginas que controla mediante la interfaz PostMessage.</p>
+              <p>soy tecnologo en analisis y desarrollo de sistemas de informacion.</p>
             </div>
           </div>
         </div>
