--- a/git-flow/index.html
+++ b/git-flow/index.html
@@ -79,7 +79,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
-        <p class="m-0 text-center text-white small">Presentacion PWA creada por <strong>Roni Carrascal & Camilo Llorente</strong></p>
+        <p class="m-0 text-center text-white small">Presentacion PWA creada por <strong>Juan fernando chica medina</strong></p>
       </div>
       <!-- /.container -->
     </footer>
