--- a/git-flow/index.html
+++ b/git-flow/index.html
@@ -67,7 +67,7 @@
           </div>
           <div class="col-lg-6">
             <div class="p-5">
-              <h2 class="display-4">Notificaciones push</h2>
+              <h2 class="display-4">Notificaciones</h2>
               <p>
                 Las notificaciones push son mensajes que se envían de forma directa desde el servidor a dispositivos móviles, como teléfonos inteligentes o tabletas, y aplicaciones de escritorio, en todo tipo de sistemas operativos, desde Android hasta Windows, pasando por Linux o iOS.</p>
             </div>
