fin feature harp

--- a/index.html
+++ b/index.html
@@ -76,6 +76,26 @@
       </div>
     </section>
 
+    <!-- feature de Harold -->
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" src="https://c.tenor.com/bFyUqoKKWpQAAAAC/hola-random.gif" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 class="display-4">Sección HAPR</h2>
+              <p>Sapien risus lectus nullam nascetur sed egestas porttitor nunc rhoncus habitant, pellentesque felis in habitasse scelerisque nostra facilisi magna taciti, pharetra dui libero nisi vehicula massa platea lobortis cum. Duis magna rutrum fringilla habitant dictum, maecenas erat neque parturient torquent augue, hac odio ligula etiam. Quam commodo varius suscipit ante auctor vitae inceptos nulla mauris convallis, sagittis aliquam vestibulum curabitur erat turpis lectus purus leo.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- feature de Harold -->
+
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
