--- a/git-flow/index.html
+++ b/git-flow/index.html
@@ -31,7 +31,7 @@
     <header class="masthead text-center text-white">
     </div>
         <div class="container">
-          <h1 class="masthead-heading mb-0">PWA Mola!</h1>
+          <h1 class="masthead-heading mb-0">Pagina Web de hola mundo!</h1>
           <h2 class="masthead-subheading mb-0">El siguiente paso de las aplicaciones web</h2><br>
           <input class="form-control" type="text" id="notificar" placeholder="id del personaje"><br>
           <button class="btn btn-primary " title="Notificar" id="buttonNotificar" type="submit" >Notificar</button>
