se agrego un parrafo y agrego un alert

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>PWA Mola!!!</title>
+    <title>PWA Hola!!!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,6 +33,7 @@
         <div class="container">
           <h1 class="masthead-heading mb-0">PWA Mola!</h1>
           <h2 class="masthead-subheading mb-0">El siguiente paso de las aplicaciones web</h2><br>
+          <p>Ingrese un numero para obtener una notificacion con un personaje de Rick and Morty :)</p><br>
           <input class="form-control" type="text" id="notificar" placeholder="id del personaje"><br>
           <button class="btn btn-primary " title="Notificar" id="buttonNotificar" type="submit" >Notificar</button>
         </div>
