--- a/git-flow/index.html
+++ b/git-flow/index.html
@@ -50,7 +50,7 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">Saludos me llamo juan</h2>
-              <p>soy tecnologo en analisis y desarrollo de sistemas de informacion.</p>
+              <p>soy tecnologo en analisis y desarrollo de sistemas.</p>
             </div>
           </div>
         </div>
