--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">ServiceWorker</h2>
-              <p>Un service worker es una secuencia de comandos ejecutados por el navegador en segundo plano. Se trata de un fichero JavaScript que continúa ejecutándose aunque el sitio web esté cerrado. ... No puede acceder directamente al DOM, sino que se comunica con las páginas que controla mediante la interfaz PostMessage.</p>
+              <h2 class="display-4">Desarrollador</h2>
+              <p>12345</p>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
           </div>
           <div class="col-lg-6">
             <div class="p-5">
-              <h2 class="display-4">Notificaciones push</h2>
+              <h2 class="display-4">Notificaciones</h2>
               <p>
                 Las notificaciones push son mensajes que se envían de forma directa desde el servidor a dispositivos móviles, como teléfonos inteligentes o tabletas, y aplicaciones de escritorio, en todo tipo de sistemas operativos, desde Android hasta Windows, pasando por Linux o iOS.</p>
             </div>
