se corrigio mola a hola :v

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="masthead text-center text-white">
     </div>
         <div class="container">
-          <h1 class="masthead-heading mb-0">PWA Mola!</h1>
+          <h1 class="masthead-heading mb-0">PWA Hola!</h1>
           <h2 class="masthead-subheading mb-0">El siguiente paso de las aplicaciones web</h2><br>
           <p>Ingrese un numero para obtener una notificacion con un personaje de Rick and Morty :)</p><br>
           <input class="form-control" type="text" id="notificar" placeholder="id del personaje"><br>
