--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <p class="m-0 text-center text-white small">Presentacion PWA creada por <strong>Roni "El papurri" Carrascal & Camilo Llorente</strong></p>
       </div>
       <!-- /.container -->
+      <p>hola</p>
     </footer>
     <script src="app.js"></script>
     <script src="js/push.min.js"></script>
