mi hotfix prueba 2

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
+              hola este es mi hotfix prueba 2
               <h2 class="display-4">Desarrollador</h2>
               <p>12345</p>
             </div>
