--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-<<<<<<< HEAD
     <title>PWA Hola dos !!!</title>
-=======
-    <title>PWA Hola a todos!!!</title>
->>>>>>> hotfix/1.0.1
+    hola este es mi hotfix 1.0.2
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
