--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <title>PWA Hola dos !!!</title>
     hola este es mi hotfix 1.0.2
+    hola este es mi hotfix 1.0.3
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
