--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="">
 
     <title>PWA Hola dos !!!</title>
-
-
+    hola mundo
+    bienvenido
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
